Added Model evaluations and comments

--- a/Kaggle - Titanic .ipynb
+++ b/Kaggle - Titanic .ipynb
@@ -3818,6 +3818,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our problem is classification and regression problem. We want to identify relationship between output (Survived or not) with other variables. This problem will come under category of Supervised learning as the training dataset is provided which we are using to train our model. Based on these criterias we can narrow down our choices of models to few which are: \n",
+    "\n",
+    "1. [Logistic Regression](https://en.wikipedia.org/wiki/Logistic_regression)\n",
+    "2. [k-Nearest Neighbors (KNN)](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm)\n",
+    "3. [Support Vector Machines (SVM)](https://en.wikipedia.org/wiki/Support_vector_machine)\n",
+    "4. [Naive Bayes Classifier](https://en.wikipedia.org/wiki/Naive_Bayes_classifier)\n",
+    "5. [Random Forest](https://en.wikipedia.org/wiki/Random_forest)\n",
+    "6. [Decision Tree](https://en.wikipedia.org/wiki/Decision_tree_learning)\n",
+    "7. [Perceptron](https://en.wikipedia.org/wiki/Perceptron)\n",
+    "8. Aritificial Neural Network (ANN)\n",
+    "9. Relevance Vector Machine (RVM) \n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 43,
    "metadata": {},
@@ -3867,8 +3885,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use Logistic Regression to validate our assumptions and decisions for feature creating and completing goals. This can be done by calculating the coefficient of the features in the decision function."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -3953,7 +3978,7 @@
        "0     Pclass    -0.749007"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3967,8 +3992,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Sex is highest positive coefficient, implying increase in Sex value increases the probability of Survived = 1 increases the most. \n",
+    "2. Pclass has highest negative coefficient of correlation. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -3977,7 +4010,7 @@
        "83.84"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3993,8 +4026,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVM generates a confidence score which is higher than Logistic Regression Model. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -4003,7 +4043,7 @@
        "84.74"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4020,12 +4060,323 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "72.28"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Naive Bayes\n",
+    "\n",
+    "naive = GaussianNB()\n",
+    "naive.fit(X_train, Y_train)\n",
+    "Y_pred = naive.predict(X_test)\n",
+    "acc_naive = round(naive.score(X_train, Y_train)*100, 2)\n",
+    "acc_naive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/lib/python2.7/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.perceptron.Perceptron'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
+      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "78.0"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Perceptron\n",
+    "\n",
+    "perceptron = Perceptron()\n",
+    "perceptron.fit(X_train, Y_train)\n",
+    "Y_pred = perceptron.predict(X_test)\n",
+    "acc_perceptron = round(perceptron.score(X_train, Y_train) * 100, 2)\n",
+    "acc_perceptron"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "79.01"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Linear SVC\n",
+    "\n",
+    "linear_svc = LinearSVC()\n",
+    "linear_svc.fit(X_train, Y_train)\n",
+    "Y_pred = linear_svc.predict(X_test)\n",
+    "acc_svc = round(linear_svc.score(X_train, Y_train)*100, 2)\n",
+    "acc_svc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda/lib/python2.7/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
+      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "75.87"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Stochastic gradient descent\n",
+    "\n",
+    "stochastic = SGDClassifier()\n",
+    "stochastic.fit(X_train, Y_train)\n",
+    "Y_pred = stochastic.predict(X_test)\n",
+    "acc_stochastic = round(stochastic.score(X_train, Y_train)*100, 2)\n",
+    "acc_stochastic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "86.76"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Decision Tree\n",
+    "\n",
+    "decision_tree = DecisionTreeClassifier()\n",
+    "decision_tree.fit(X_train, Y_train)\n",
+    "Y_pred = decision_tree.predict(X_test)\n",
+    "acc_decision_tree = round(decision_tree.score(X_train, Y_train) * 100, 2)\n",
+    "acc_decision_tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "86.76"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Random Forest \n",
+    "\n",
+    "random_forest = RandomForestClassifier(n_estimators=100)\n",
+    "random_forest.fit(X_train, Y_train)\n",
+    "Y_pred = random_forest.predict(X_test)\n",
+    "random_forest.score(X_train, Y_train)\n",
+    "acc_random_forest = round(random_forest.score(X_train, Y_train) * 100, 2)\n",
+    "acc_random_forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Evaluation\n",
+    "\n",
+    "Now rank the evaluation based on their confidence score. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Random Forest</td>\n",
+       "      <td>86.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Decision Tree</td>\n",
+       "      <td>86.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>KNN</td>\n",
+       "      <td>84.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Logistic Regression</td>\n",
+       "      <td>80.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Support Vector Machines</td>\n",
+       "      <td>79.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Linear SVC</td>\n",
+       "      <td>79.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Perceptron</td>\n",
+       "      <td>78.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Stochastic Gradient Decent</td>\n",
+       "      <td>75.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Naive Bayes</td>\n",
+       "      <td>72.28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Model  Score\n",
+       "3               Random Forest  86.76\n",
+       "8               Decision Tree  86.76\n",
+       "1                         KNN  84.74\n",
+       "2         Logistic Regression  80.36\n",
+       "0     Support Vector Machines  79.01\n",
+       "7                  Linear SVC  79.01\n",
+       "5                  Perceptron  78.00\n",
+       "6  Stochastic Gradient Decent  75.87\n",
+       "4                 Naive Bayes  72.28"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "models = pd.DataFrame({\n",
+    "    'Model' :  ['Support Vector Machines', 'KNN', 'Logistic Regression', \n",
+    "              'Random Forest', 'Naive Bayes', 'Perceptron', \n",
+    "              'Stochastic Gradient Decent', 'Linear SVC', \n",
+    "              'Decision Tree'],\n",
+    "    'Score': [acc_svc, acc_knn, acc_log, \n",
+    "              acc_random_forest, acc_naive, acc_perceptron, \n",
+    "              acc_stochastic, acc_svc, acc_decision_tree]})\n",
+    "models.sort_values(by='Score', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "While both Decision Tree and Random Forest score the same, we choose to use Random Forest as they correct for decision trees' habit of overfitting to their training set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "output = pd.DataFrame({\n",
+    "    'PassengerId': test_df['PassengerId'],\n",
+    "    'Survived': Y_pred\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output.to_csv('../submission.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
